--- a/BoardSpringProject/src/main/resources/application.properties
+++ b/BoardSpringProject/src/main/resources/application.properties
@@ -8,6 +8,8 @@ mybatis.type-aliases-package = board.mapper
 mybatis.mapper-locations=mapper/**/*.xml
 
 server.port = 9999
+server.servlet.session.timeout=30m
+
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 
