--- a/BoardSpringProject/src/main/resources/application.properties
+++ b/BoardSpringProject/src/main/resources/application.properties
@@ -10,6 +10,9 @@ mybatis.mapper-locations=mapper/**/*.xml
 server.port = 9999
 server.servlet.session.timeout=30m
 
+spring.servlet.multipart.max-file-size = 300MB
+spring.servlet.multipart.max-request-size = 300MB
+
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 
